--- a/dragon-ring/bootstrap/style.css
+++ b/dragon-ring/bootstrap/style.css
@@ -1,87 +1,1 @@
-/*@import url('https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap');
-*/
-@import url('https://fonts.googleapis.com/css2?family=El+Messiri&family=Slabo+27px&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=El+Messiri&family=Slabo+27px&display=swap');
-body {
-  background-color: black;
-  /*font-family: 'Slabo 27px', serif;
- font-family: 'Gloria Hallelujah', cursive;*/
-font-family: 'El Messiri', sans-serif;
-}
-.card-img , .card{
-  border-radius:20px !important;
-}
-nav{
-  font-family: 'Dancing Script', cursive ;
-  font-size:150%;
-}
-
-nav div:hover , nav li:hover , nav ul:hover{
-  padding-right:8px;
-  padding-left:8px;
-}
-nav div , nav li , nav ul
-.dropdown-menu{
-transition: 0.5s;
-text-shadow: 1px #fff;
-background-color:000000ee;
-}
-
-.elegant{
-background-color:#212121;
-}
-#imadiv img{
-	width:90%;
-	height:200px;
-	margin: 0 auto;
-}
-img{
-	pointer-events: none;
-  width: 50% !importanat;
-  height: 50% !importanat;
-  border-radius: 10%;
-
-}
-.dropdown-menu{
-  transition: 1s;
-}
-.main-se{
-   border-radius:5%;
-  background-color: #242424;
-}
-.carousel{
-
-}
-
-.container,.jumbotron,.main-se,.jumbotron-center,.text-center{
-   border-radius:5% !important;
-  margin-top:6%;
-  background-color: #242424 !important;
-}
-.carousel-caption{
-/*  background-color:black;border-radius:7% !important;
-  opacity:0.6;*/
-}
-
-
-.carousel-item img{
-  padding:0;margin-left:15%;
-}
-#brand_image , a img{
-    width:50px;
-    height:50px;
-    transition: 1s;
-    border-radius: 20px;
-    padding-top: 2%;
-    padding-right:10%;
-    border-right:solid red 1px;
-}
-#brand_image:hover , a img:hover{
-   transform: rotate(360deg) !important;
-}
-.img-brand:hover{
-    transform: rotate(360deg);
-}
-.container{
-  width:98% !important;
-}
+/* Dragon-Ring css file */
